각 카테고리 폴더 추가

--- a/www/html/components/component_pagination.html
+++ b/www/html/components/component_pagination.html
@@ -231,9 +231,7 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="page-nav-container">
-                    <!--+page-nav('type01')-->
-                  </div>
+                  <div class="page-nav-container"><!--+page-nav('type01')--></div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -318,9 +316,7 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="page-nav-container">
-                    <!--+page-nav('type02', 'type02')-->
-                  </div>
+                  <div class="page-nav-container"><!--+page-nav('type02', 'type02')--></div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
