--- a/www/html/components/component_tab.html
+++ b/www/html/components/component_tab.html
@@ -192,8 +192,7 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="tab-nav-container">
-                    <!--+tab-nav(
+                  <div class="tab-nav-container"><!--+tab-nav(
     'tab-nav',
     0,
     [
@@ -202,8 +201,7 @@
         'OFF',
         'OFF'
     ]
-)-->
-                  </div>
+)--></div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -269,8 +267,7 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="tab-nav-container">
-                    <!--+tab-nav(
+                  <div class="tab-nav-container"><!--+tab-nav(
     'tab-nav unequal',
     0,
     [
@@ -279,8 +276,7 @@
         'OFF',
         'OFF'
     ]
-)-->
-                  </div>
+)--></div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -346,8 +342,7 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="tab-nav-container scroll">
-                    <!--+tab-nav(
+                  <div class="tab-nav-container scroll"><!--+tab-nav(
     'tab-nav unequal',
     0,
     [
@@ -356,8 +351,7 @@
         'OFF',
         'OFF'
     ]
-)-->
-                  </div>
+)--></div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
