--- a/www/html/components/component_table.html
+++ b/www/html/components/component_table.html
@@ -355,8 +355,7 @@
                           <th scope="col">2018/12/11</th>
                         </tr>
                       </thead>
-                      <tbody>
-                        <!-- 계측검사 - 비만-->
+                      <tbody><!-- 계측검사 - 비만-->
                         <tr>
                           <th rowspan="4" scope="row">비만</th>
                           <td>신장</td>
@@ -879,8 +878,7 @@
                           <th class="sticky-thead02" scope="col">2018/12/11</th>
                         </tr>
                       </thead>
-                      <tbody>
-                        <!-- 계측검사 - 비만-->
+                      <tbody><!-- 계측검사 - 비만-->
                         <tr>
                           <th class="sticky-tbody01" rowspan="4" scope="row">비만</th>
                           <td class="sticky-tbody02">신장</td>
