--- a/www/html/components/component_video.html
+++ b/www/html/components/component_video.html
@@ -166,8 +166,7 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <!--+youtubeIframe-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+youtubeIframe-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -196,8 +195,7 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <!--+youtubeObject-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+youtubeObject-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -226,8 +224,7 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <!--+youtubeEmbed-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+youtubeEmbed-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -256,8 +253,7 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <!--+vimeoIframe-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+vimeoIframe-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -286,8 +282,7 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <!--+vimeoEmbed-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+vimeoEmbed-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -319,8 +314,7 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <!--+video-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+video-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
