--- a/www/html/components/component_dropdowns.html
+++ b/www/html/components/component_dropdowns.html
@@ -161,7 +161,8 @@
               <div class="et--component-group-sub">
                 <h4 class="et--component-group-title02">리스트 아래로 열림</h4>
                 <div class="et--component-view">
-                  <div class="drop-down-container"><!-- open 클래스 추가 시 열림-->
+                  <div class="drop-down-container">
+                    <!-- open 클래스 추가 시 열림-->
                     <div class="drop-down-align">
                       <button class="drop-down-btn" type="button">
                         <span class="drop-down-index">문의하실 유형을 선택하세요.</span>
@@ -223,7 +224,8 @@
               <div class="et--component-group-sub">
                 <h4 class="et--component-group-title02">리스트 위로 열림</h4>
                 <div class="et--component-view">
-                  <div class="drop-down-container"><!-- open 클래스 추가 시 열림-->
+                  <div class="drop-down-container">
+                    <!-- open 클래스 추가 시 열림-->
                     <div class="drop-down-align top">
                       <button class="drop-down-btn" type="button">
                         <span class="drop-down-index">문의하실 유형을 선택하세요.</span>
