--- a/www/html/components/component_map.html
+++ b/www/html/components/component_map.html
@@ -164,7 +164,8 @@
                   <div class="map-api" id="map01"></div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+mapApiNaver-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+mapApiNaver-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -191,7 +192,8 @@
                   <div class="map-api" id="map02"></div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+mapApiKakao-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+mapApiKakao-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -218,7 +220,8 @@
                   <div class="map-api" id="map03"></div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+mapApiGoogle-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+mapApiGoogle-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
