--- a/www/html/components/component_video.html
+++ b/www/html/components/component_video.html
@@ -166,7 +166,8 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+youtubeIframe-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+youtubeIframe-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -195,7 +196,8 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+youtubeObject-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+youtubeObject-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -224,7 +226,8 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+youtubeEmbed-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+youtubeEmbed-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -253,7 +256,8 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+vimeoIframe-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+vimeoIframe-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -282,7 +286,8 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+vimeoEmbed-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+vimeoEmbed-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -314,7 +319,8 @@
                   </div>
                 </div>
                 <div class="et--component-view">
-                  <!-- pug mixin 주석을 해제하고 사용하세요--><!--+video-->
+                  <!-- pug mixin 주석을 해제하고 사용하세요-->
+                  <!--+video-->
                 </div>
                 <div class="et--component-code">
                   <div class="options">
