--- a/www/html/components/component_tab.html
+++ b/www/html/components/component_tab.html
@@ -192,7 +192,8 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="tab-nav-container"><!--+tab-nav(
+                  <div class="tab-nav-container">
+                    <!--+tab-nav(
     'tab-nav',
     0,
     [
@@ -201,7 +202,8 @@
         'OFF',
         'OFF'
     ]
-)--></div>
+)-->
+                  </div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -267,7 +269,8 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="tab-nav-container"><!--+tab-nav(
+                  <div class="tab-nav-container">
+                    <!--+tab-nav(
     'tab-nav unequal',
     0,
     [
@@ -276,7 +279,8 @@
         'OFF',
         'OFF'
     ]
-)--></div>
+)-->
+                  </div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
@@ -342,7 +346,8 @@
                 </div>
                 <div class="et--component-view">
                   <!-- pug mixin 주석을 해제하고 사용하세요-->
-                  <div class="tab-nav-container scroll"><!--+tab-nav(
+                  <div class="tab-nav-container scroll">
+                    <!--+tab-nav(
     'tab-nav unequal',
     0,
     [
@@ -351,7 +356,8 @@
         'OFF',
         'OFF'
     ]
-)--></div>
+)-->
+                  </div>
                 </div>
                 <div class="et--component-code">
                   <div class="options">
