--- a/www/css_partials/reset.css
+++ b/www/css_partials/reset.css
@@ -14,7 +14,7 @@ html {
   font-size: 10px;
   font-weight: 400; }
   html:lang(ko) {
-    font-family: "Malgun Gothic", "맑은 고딕", Dotum, "돋움", arial, verdana, sans-serif; }
+    font-family: Noto Sans KR, "Malgun Gothic", "맑은 고딕", Dotum, "돋움", arial, verdana, sans-serif; }
   html:lang(en) {
     font-family: Helvetica, Arial, sans-serif; }
   html:lang(ja) {
