코딩리스트, 파일명 수정

--- a/dev/_codinglist/_cl01.pug
+++ b/dev/_codinglist/_cl01.pug
@@ -44,39 +44,11 @@
         [
             "문화체험", /* 0. 뎁스1 */
             "집콕+집밖 문화생활", /* 1. 뎁스2 */
-            "tab 1", /* 2. 뎁스3 */
+            "", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
             "DI-11100", /* 5. page(ID) */
-            "portal/di11100_01.html", /* 6. path */
-            "", /* 7. 완료일 */
-            "", /* 8. 상태 */
-            [
-                ["", ""],
-            ],
-        ],
-        [
-            "", /* 0. 뎁스1 */
-            "", /* 1. 뎁스2 */
-            "tab 2", /* 2. 뎁스3 */
-            "", /* 3. 뎁스4 */
-            "", /* 4. 뎁스5 */
-            "DI-11100", /* 5. page(ID) */
-            "portal/di11100_02.html", /* 6. path */
-            "", /* 7. 완료일 */
-            "", /* 8. 상태 */
-            [
-                ["", ""],
-            ],
-        ],
-        [
-            "", /* 0. 뎁스1 */
-            "", /* 1. 뎁스2 */
-            "tab 3", /* 2. 뎁스3 */
-            "", /* 3. 뎁스4 */
-            "", /* 4. 뎁스5 */
-            "DI-11100", /* 5. page(ID) */
-            "portal/di11100_03.html", /* 6. path */
+            "home/index.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
             [
@@ -86,39 +58,11 @@
         [
             "", /* 0. 뎁스1 */
             "한눈에 보는 문화정보", /* 1. 뎁스2 */
-            "type01", /* 2. 뎁스3 */
+            "", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
             "DI-11200", /* 5. page(ID) */
-            "portal/di11200_01.html", /* 6. path */
-            "", /* 7. 완료일 */
-            "", /* 8. 상태 */
-            [
-                ["", ""],
-            ],
-        ],
-        [
-            "", /* 0. 뎁스1 */
-            "", /* 1. 뎁스2 */
-            "type02", /* 2. 뎁스3 */
-            "", /* 3. 뎁스4 */
-            "", /* 4. 뎁스5 */
-            "DI-11200", /* 5. page(ID) */
-            "portal/di11200_03.html", /* 6. path */
-            "", /* 7. 완료일 */
-            "", /* 8. 상태 */
-            [
-                ["", ""],
-            ],
-        ],
-        [
-            "", /* 0. 뎁스1 */
-            "", /* 1. 뎁스2 */
-            "type03", /* 2. 뎁스3 */
-            "", /* 3. 뎁스4 */
-            "", /* 4. 뎁스5 */
-            "DI-11200", /* 5. page(ID) */
-            "portal/di11200_03.html", /* 6. path */
+            "oneeye/oneEyeList.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
             [
@@ -132,7 +76,7 @@
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
             "DI-11300", /* 5. page(ID) */
-            "portal/di11300_01.html", /* 6. path */
+            "perform/relayList.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
             [
@@ -146,7 +90,7 @@
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
             "DI-11500", /* 5. page(ID) */
-            "portal/di11500_01.html", /* 6. path */
+            "space/facility.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
             [
