--- a/dev/html/culturetv/mainList.pug
+++ b/dev/html/culturetv/mainList.pug
@@ -6,4 +6,52 @@ block append css
 block contents
     #container.pageClassSub
         #content(role='main')
-            | 컨텐츠 시작
+            .content-inner
+                section.visual-top
+                        .section-inner
+                            .visual-area.type-row
+                                .visual-content-box
+                                    .video 비디오 컨텐츠 영역
+                                    
+                                .visual-text-box
+                                    strong.category 문화유산
+                                    h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
+                                    p.sub-txt [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
+                            .thumbnail-area.swiper-container
+                                ul.thumbnail-list.swiper-wrapper
+                                    li.swiper-slide
+                                        button(type="button")
+                                            span.thumb-img
+                                                img(src="", alt="")
+                                            strong.sub-category 공연/전시
+                                            p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
+                                    li.swiper-slide
+                                        button(type="button")
+                                            span.thumb-img
+                                                img(src="", alt="")
+                                            strong.sub-category 공연/전시
+                                            p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
+                                    li.swiper-slide
+                                        button(type="button")
+                                            span.thumb-img
+                                                img(src="", alt="")
+                                            strong.sub-category 공연/전시
+                                            p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
+                                    li.swiper-slide
+                                        button(type="button")
+                                            span.thumb-img
+                                                img(src="", alt="")
+                                            strong.sub-category 공연/전시
+                                            p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
+                                    li.swiper-slide
+                                        button(type="button")
+                                            span.thumb-img
+                                                img(src="", alt="")
+                                            strong.sub-category 공연/전시
+                                            p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
+                                    li.swiper-slide
+                                        button(type="button")
+                                            span.thumb-img
+                                                img(src="", alt="")
+                                            strong.sub-category 공연/전시
+                                            p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링6
