헤더,푸터 더미 추가

--- a/dev/css_partials/footer.scss
+++ b/dev/css_partials/footer.scss
@@ -2,471 +2,18 @@
 
 @import 'dev/_src/_scss/_setting';
 
-/*! mobile 버전 - css */
-@media (max-width:1023px){
-    // 실제 구축시 .footer-sample01 클래스 제거 하기
-    .footer-sample01{
-        /*! footer layout */
-        .footer-container{}
-        .footer-content{
-            background-color:$bg-333333;
-        }
+#footer {
+    width:100%;
+    height:286px;
+    background:#dfdfdf;
+    font-size:24px;
+    text-align: center;
+    vertical-align: middle;
 
-        /*! footer etc */
-        .footer-etc-container{
-            background-color:$bg-2b2b2b;
-        }
-        .footer-etc-list{
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            @include rem(padding, 10px 0 10px 20px);
-        }
-        .footer-etc-item{
-            @include rem(margin-right, 28px);
-            &:nth-child(2){
-                .footer-etc-txt{
-                    color:$font-00bca9;
-                }
-            }
-        }
-        .footer-etc-link{
-            display:block;
-            @include rem(padding, 5px 0 5px 0);
-        }
-        .footer-etc-txt{
-            @include rem(font-size, 13px);
-            color:#ffffff;
-            line-height: 1.76;
-        }
-
-        /*! footer sns */
-        .footer-sns-container{}
-        .footer-sns-list{
-            display: flex;
-            align-items: center;
-            @include rem(padding, 25px 20px 20px 20px);
-        }
-        .footer-sns-item{
-            @include rem(margin-right, 35px);
-        }
-        .footer-sns-link{
-            display: block;
-        }
-        [class^=footer-sns-ico]{
-            display:block;
-            background-repeat: no-repeat;
-            background-position: center center;
-        }
-        .footer-sns-ico01{
-            @include rem(width, 22px);
-            @include rem(height, 22px);
-            @include rem(background-size, 22px 22px);
-            background-color:red;
-        }
-        .footer-sns-ico02{
-            @include rem(width, 15px);
-            @include rem(height, 22px);
-            @include rem(background-size, 15px 22px);
-            background-color:yellow;
-        }
-        .footer-sns-ico03{
-            @include rem(width, 25px);
-            @include rem(height, 19px);
-            @include rem(background-size, 25px 19px);
-            background-color:blue;
-        }
-        .footer-sns-ico04{
-            @include rem(width, 22px);
-            @include rem(height, 20px);
-            @include rem(background-size, 22px 20px);
-            background-color:purple;
-        }
-
-        /*! footer info */
-        .footer-info-container{}
-        .footer-info-list{
-            display: flex;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            flex-direction: column;
-            @include rem(padding, 0 20px 0 20px);
-        }
-        .footer-info-item{
-            &:nth-child(1){
-                .footer-info-txt:nth-child(1){
-                    &:after{
-                        display:inline-block;
-                    }
-                }
-            }
-            &:nth-child(2){
-                .footer-info-txt:nth-child(1){
-                    &:after{
-                        display:inline-block;
-                    }
-                }
-            }
-            &:last-child{
-                font-family: 'Montserrat';
-                @include rem(margin-top, 3px);
-                .footer-info-txt{
-                    color:$font-999999;
-                }
-            }
-        }
-        .footer-info-txt{
-            @include rem(font-size, 12px);
-            color:#ffffff;
-            line-height: 1.83;
-            @include rem(margin, 0 9px 0 0);
-            &:after{
-                display:none;
-                @include rem(margin, -2px 0 0 10px);
-                content:'';
-                width:1px;
-                @include rem(height, 12px);
-                background-color:$bg-222222;
-            }
-        }
-
-        /*! footer util */
-        .footer-util-container{
-            @include rem(padding, 20px 0 45px 0);
-        }
-        .footer-util-list{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            @include rem(padding, 0 20px 0 20px);
-        }
-        .footer-logo-continer{}
-        .footer-logo-btn{
-            display:block;
-            @include rem(width, 90px);
-            @include rem(height, 28px);
-            background-color:skyblue;
-            @include rem(background-size, 90px 28px);
-        }
-        .footer-family-site-continer{
-            .drop-down-container{
-                @include rem(width, 150px);
-            }
-            .drop-down-align.top{
-                .drop-down-btn{
-                    border:1px solid rgba(0,0,0,0.4);
-                    @include rem(padding, 6px 15px 5px 15px);
-                }
-                .drop-down-index{
-                    color:#ffffff;
-                    @include rem(font-size, 13px);
-                    line-height: 1.76;
-                }
-                .drop-down-ico{
-                    border-color:#ffffff;
-                }
-                .drop-down-link{
-                    @include rem(padding, 9px 15px 9px 15px);
-                    &:focus,
-                    &:hover{
-                        background-color:$bg-444444;
-                    }
-                }
-                .drop-down-txt{
-                    color:#ffffff;
-                }
-                &.open{
-                    .drop-down-btn{
-                        background-color:$bg-444444;
-                    }
-                    .drop-down-ico{
-                        border-color:#ffffff;
-                    }
-                    .drop-down-list{
-                        background-color:$bg-444444;
-                    }
-                }
-            }
-        }
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*! pc & tablet 버전 - css */
-@media (min-width:1024px){
-    // 실제 구축시 .footer-sample01 클래스 제거 하기
-    .footer-sample01{
-        /*! footer layout */
-        .footer-container{}
-        .footer-content{
-            position: relative;
-            background-color:$bg-333333;
-            &:before{
-                content:'';
-                position: absolute;
-                top:0;left:0;
-                width:100%;
-                background-color:$bg-2b2b2b;
-                @include rem(height, 55px);
-                border-bottom:1px solid #000000;
-            }
-        }
-        .footer-align01{
-            position: relative;
-            z-index: 1;
-            max-width:1240px;
-            margin:0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            @include rem(height, 55px);
-            @include rem(padding, 0 20px 0 20px);
-        }
-        .footer-align02{
-            max-width:1240px;
-            margin:0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            @include rem(padding, 25px 20px 40px 20px);
-        }
-
-        /*! footer etc */
-        .footer-etc-container{}
-        .footer-etc-list{
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            @include rem(padding, 10px 0 10px 0);
-        }
-        .footer-etc-item{
-            @include rem(margin-right, 40px);
-            &:nth-child(2){
-                .footer-etc-txt{
-                    color:$font-00bca9;
-                }
-            }
-        }
-        .footer-etc-link{
-            display:block;
-            @include rem(padding, 5px 0 5px 0);
-        }
-        .footer-etc-txt{
-            @include rem(font-size, 16px);
-            color:#ffffff;
-            line-height: 1.625;
-        }
-
-        /*! footer sns */
-        .footer-sns-container{}
-        .footer-sns-list{
-            display: flex;
-            align-items: center;
-            @include rem(padding, 15px 0 15px 0);
-        }
-        .footer-sns-item{
-            @include rem(margin-right, 35px);
-            &:last-child{
-                margin-right:0;
-            }
-        }
-        .footer-sns-link{
-            display: block;
-        }
-        [class^=footer-sns-ico]{
-            display:block;
-            background-repeat: no-repeat;
-            background-position: center center;
-        }
-        .footer-sns-ico01{
-            @include rem(width, 23px);
-            @include rem(height, 22px);
-            @include rem(background-size, 23px 22px);
-            background-color:red;
-        }
-        .footer-sns-ico02{
-            @include rem(width, 16px);
-            @include rem(height, 23px);
-            @include rem(background-size, 16px 23px);
-            background-color:yellow;
-        }
-        .footer-sns-ico03{
-            @include rem(width, 27px);
-            @include rem(height, 19px);
-            @include rem(background-size, 27px 19px);
-            background-color:blue;
-        }
-        .footer-sns-ico04{
-            @include rem(width, 24px);
-            @include rem(height, 22px);
-            @include rem(background-size, 24px 22px);
-            background-color:pink;
-        }
-
-        /*! footer info */
-        .footer-info-container{}
-        .footer-info-list{
-            display: flex;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            @include rem(width, 800px);
-        }
-        .footer-info-item{
-            @include rem(padding, 2px 0 2px 0);
-            // &:nth-child(2){
-            //     .footer-info-txt:nth-child(2){
-            //         font-family: 'Montserrat';
-            //     }
-            // }
-            &:nth-child(3){
-                .footer-info-txt:nth-child(1){
-                    &:after{
-                        display:none;
-                    }
-                }
-            }
-            &:nth-child(5){
-                .footer-info-txt:nth-child(1){
-                    &:after{
-                        display:none;
-                    }
-                }
-            }
-            &:nth-child(6){
-                .footer-info-txt:nth-child(1){
-                    &:after{
-                        display:none;
-                    }
-                }
-            }
-            &:last-child{
-                font-family: 'Montserrat';
-                @include rem(margin-top, 6px);
-                .footer-info-txt{
-                    color:$font-999999;
-                }
-            }
-        }
-        .footer-info-txt{
-            @include rem(font-size, 14px);
-            color:#ffffff;
-            line-height: 1.71;
-            @include rem(margin, 0 14px 0 0);
-            &:after{
-                display:inline-block;
-                @include rem(margin, -2px 0 0 15px);
-                content:'';
-                width:1px;
-                @include rem(height, 12px);
-                background-color:$bg-222222;
-            }
-        }
-
-        /*! footer util */
-        .footer-util-container{}
-        .footer-util-list{
-            display: flex;
-            align-items: flex-end;
-            justify-content: space-between;
-            flex-direction: column;
-        }
-        .footer-logo-continer{}
-        .footer-logo-btn{
-            display:block;
-            @include rem(width, 100px);
-            @include rem(height, 32px);
-            background-color:skyblue;
-            @include rem(background-size, 100px 32px);
-            @include rem(margin-top, -5px);
-            @include rem(margin-bottom, 25px);
-        }
-        .footer-family-site-continer{
-            .drop-down-container{
-                @include rem(width, 180px);
-            }
-            .drop-down-align.top{
-                .drop-down-btn{
-                    border:1px solid rgba(0,0,0,0.4);
-                    @include rem(padding, 8px 15px 8px 15px);
-                }
-                .drop-down-index{
-                    color:#ffffff;
-                    @include rem(font-size, 13px);
-                    line-height: 1.76;
-                }
-                .drop-down-ico{
-                    border-color:#ffffff;
-                }
-                .drop-down-link{
-                    @include rem(padding, 11px 15px 12px 15px);
-                    &:focus,
-                    &:hover{
-                        background-color:$bg-444444;
-                    }
-                }
-                .drop-down-txt{
-                    color:#ffffff;
-                }
-                &.open{
-                    .drop-down-btn{
-                        background-color:$bg-444444;
-                    }
-                    .drop-down-ico{
-                        border-color:#ffffff;
-                    }
-                    .drop-down-list{
-                        background-color:$bg-444444;
-                    }
-                }
-            }
-        }
+    .footer-content {
+        display: flex;
+        height:100%;
+        justify-content: center;
+        align-items: center;
     }
 }
