--- a/dev/html/culturetv/mainList.pug
+++ b/dev/html/culturetv/mainList.pug
@@ -55,3 +55,50 @@ block contents
                                                 img(src="", alt="")
                                             strong.sub-category 공연/전시
                                             p.txt [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링6
+                section.slide-contents
+                    .section-inner
+                        h3.title-h3
+                            a(href="#") 문화영상
+                                i.ico(aria-hidden="true")
+                        .slide-area.swiper-container(data-slide-type="culture")
+                            .swiper-wrapper
+                                .swiper-slide
+                                    a(href="")
+                                        span.thumb-img
+                                            img(src="", alt="")
+                                            i.ico(aria-hidden="true")
+                                        ul.category
+                                            li
+                                                span.txt 생활
+                                            li
+                                                span.txt 서울
+                                        p.txt ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                .swiper-slide
+                                    a(href="")
+                                        span.thumb-img
+                                            img(src="", alt="")
+                                            i.ico(aria-hidden="true")
+                                        ul.category
+                                            li
+                                                span.txt 생활
+                                            li
+                                                span.txt 서울
+                                        p.txt ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                .swiper-slide
+                                    a(href="")
+                                        span.thumb-img
+                                            img(src="", alt="")
+                                            i.ico(aria-hidden="true")
+                                        ul.category
+                                            li
+                                                span.txt 생활
+                                            li
+                                                span.txt 서울
+                                        p.txt ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                        p.sub-txt 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                            .swiper-pager-area
+                                .swiper-button-prev
+                                .swiper-button-next 
+                                .swiper-pagination
