--- a/dev/css_partials/component_common.scss
+++ b/dev/css_partials/component_common.scss
@@ -94,10 +94,10 @@ a{
 .dimm img{display:block}
 
 /*! 공통 레이아웃 속성 */
-html,body{height:100%;}
-#wrap{height:100%;}
-#container{height:100%;}
-#content{height:100%;}
+// html,body{height:100%;}
+// #wrap{height:100%;}
+// #container{height:100%;}
+// #content{height:100%;}
 
 /*! 아이콘 공통 속성 */
 // mobile, pc 공통
