--- a/dev/css/_kya.scss
+++ b/dev/css/_kya.scss
@@ -1,5 +1,215 @@
 @charset "utf-8";
+ 
 
-.title-h1 {
-    font-size: 24px;
+.ico-housein {
+    width: 60px;
+    height: 60px;
+    background:url('/images/home/ico_house_in.png') center/contain;
 }
+.ico-houseout {
+    width: 60px;
+    height: 60px;
+    background:url('/images/home/ico_house_out.png') center/contain;
+}
+
+.section-inner {
+    max-width: 1280px;
+    margin: 0 auto;
+    // padding: 0 50px;
+}
+
+.intro-home {
+    height: 254px;
+    background:url('/images/home/img_banner_home.jpg') center/cover;
+}
+
+.title-area {
+    text-align: center;
+    margin-bottom: 32px;
+
+    .title-h2 {
+        font-size: 32px;
+        font-weight: bold;
+        color: #222;
+    }
+}
+
+.main-home {
+    padding: 52px 0 80px;
+}
+
+.main-home-swiper {
+    .swiper-slide {
+        a {
+            display: block;
+            cursor: pointer;
+        }
+    }
+
+    .box-thumb {
+        position: relative;
+    }
+
+    .thumb-img {
+        display: block;
+        width: 100%;
+    }
+
+    .thumb-category {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+
+    .thumb-btn {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 48px;
+        border: solid 1px #eee;
+        background-color: #222;
+        text-align: center;
+
+        .txt {
+            font-size: 16px;
+            font-weight: bold;
+            color: #fff;
+        }
+    }
+
+    .box-tag {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 16px;
+    }
+
+    .tag{
+        display:inline-flex;
+        align-items: center;
+        background-color:#f8f8f8;
+        height: 27px;
+        padding: 0 12px;
+        border-radius: 13.5px;
+        margin-right: 8px;
+
+        &:last-child {
+            margin: 0;
+        }
+
+        .txt{
+            font-size: 13px;
+        }
+        &.type01{
+            background-color:#fff;
+            border: solid 1px #222;
+            .txt{color:#222;}
+        }
+    }
+
+    .box-txt {
+        margin-top: 8px;
+
+        .txt-tit {
+            display: block;
+            font-size: 20px;
+            color: #222;
+            line-height: 1.5;
+            margin-bottom: 16px;
+            height: 59px;
+
+            width: 100%;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            word-break: break-word;
+            display: -webkit-box;
+            -webkit-line-clamp: 2; // 원하는 라인수
+            -webkit-box-orient: vertical
+        }
+
+        .txt-desc {
+            font-size: 14px;
+            color: #999;
+            line-height: 1.42;
+
+            width: 100%;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            word-break: break-word;
+            display: -webkit-box;
+            -webkit-line-clamp: 2; // 원하는 라인수
+            -webkit-box-orient: vertical
+        }
+
+        .txt-data {
+            font-size: 14px;
+            color: #999;
+            line-height: 1.42;
+            
+            display: flex;
+            flex-wrap: wrap;
+
+            .data-term {
+                width: 70px;
+            }
+
+            .data-desc {
+                width: calc(100% - 70px);
+                margin-bottom: 4px;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width:1024px){
+    .title-area .title-h2 {
+        font-size: 24px;
+    }
+
+    .main-home-swiper {
+        [class^="ico-"] {
+            width: 48px;
+            height: 48px;
+        }
+
+        .swiper-container {
+            padding: 0 23px;
+        }
+
+        .swiper-slide {
+            width: 152px;
+        }
+    }
+
+    .main-home-swiper .tag {
+        height: 23px;
+        padding: 8px;
+        margin-right: 4px;
+    }
+    .main-home-swiper .tag .txt {
+        font-size: 10px;
+    }
+
+    .main-home-swiper .box-txt .txt-tit {
+        font-size: 16px;
+        height: 48px;
+    }
+    .main-home-swiper .box-txt .txt-desc {
+        font-size: 12px;
+    }
+    .main-home-swiper .box-txt .txt-data {
+        font-size: 12px;
+    }
+
+    
+}
+
+
