--- a/dev/html/home/index.pug
+++ b/dev/html/home/index.pug
@@ -1,7 +1,7 @@
 extends /_src/_pug/_extend_html5
 
 block append css
-    //- link(href=`${pathSettingHtml}css/카테고리별.css`, type='text/css', rel='stylesheet')
+    link(href=`${pathSettingHtml}css/oneEye.css`, type='text/css', rel='stylesheet')
 
 block contents
     #container.pageClassSub
@@ -13,33 +13,223 @@ block contents
                             li
                                 a(href="#") 홈
                             li
-                                a(href="#") 문화공감
+                                a(href="#") 문화체험
                             li
-                                a(href="#") 문화TV
-                            li
-                                a.on(href="#") 공감리포트
+                                a.on(href="#") 집콕+집밖 문화생활
                     .share-area
                         ul.share-content
                             li
                                 a.link-share(href="#")
                             li
                                 a.link-print(href="#")
-                section.visual-top
+                section.intro-home
+                    span.hide-txt 일상문화의 시대, 공연/전시/축제 등 다채로운 문화정보를 찾아보세요.
+                    h1.hide-txt 집콕+집밖 문화생활
+
+                section.main-home
                     .section-inner
                         .title-area
-                            h1.title-h1 한눈에 보는 문화정보
-                                |
-                                span.txt 일상문화의 시대, 공연/전시/축제 등 다채로운 문화정보를 찾아보세요.
+                            h2.title-h2 오늘의 집콕+집밖
+                        .slide-area
+                            .main-home-swiper
+                                .swiper-container
+                                    ul.swiper-wrapper
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-housein
+                                                            span.hide-txt 집콕
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                    .tag.type01
+                                                        span.txt 유료
+                                                .box-txt
+                                                    strong.txt-tit 지원의 음악과 미술이 함께하는 콘서트
+                                                    p.txt-desc 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-houseout
+                                                            span.hide-txt 집밖
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                .box-txt
+                                                    strong.txt-tit 춤추는 DNA
+                                                    p.txt-desc
+                                                    dl.txt-data
+                                                        dt.data-term 기간 
+                                                        dd.data-desc 2022.09.21~  2022.09.25
+                                                        dt.data-term 문의
+                                                        dd.data-desc 02-360-866
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-housein
+                                                            span.hide-txt 집콕
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                    .tag.type01
+                                                        span.txt 유료
+                                                .box-txt
+                                                    strong.txt-tit 지원의 음악과 미술이 함께하는 콘서트
+                                                    p.txt-desc 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-houseout
+                                                            span.hide-txt 집밖
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                .box-txt
+                                                    strong.txt-tit 지원의 음악과 미술이 함께하는 콘서트
+                                                    p.txt-desc
+                                                    dl.txt-data
+                                                        dt.data-term 기간 
+                                                        dd.data-desc 2022.09.21~  2022.09.25
+                                                        dt.data-term 문의
+                                                        dd.data-desc 02-360-866
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-housein
+                                                            span.hide-txt 집콕
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                    .tag.type01
+                                                        span.txt 유료
+                                                .box-txt
+                                                    strong.txt-tit 지원의 음악과 미술이 함께하는 콘서트
+                                                    p.txt-desc 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-houseout
+                                                            span.hide-txt 집밖
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                .box-txt
+                                                    strong.txt-tit 춤추는 DNA
+                                                    p.txt-desc
+                                                    dl.txt-data
+                                                        dt.data-term 기간 
+                                                        dd.data-desc 2022.09.21~  2022.09.25
+                                                        dt.data-term 문의
+                                                        dd.data-desc 02-360-866
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-housein
+                                                            span.hide-txt 집콕
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                    .tag.type01
+                                                        span.txt 유료
+                                                .box-txt
+                                                    strong.txt-tit 지원의 음악과 미술이 함께하는 콘서트
+                                                    p.txt-desc 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의
+                                        li.swiper-slide
+                                            a(href="#none")
+                                                .box-thumb
+                                                    img.thumb-img(src="https://placeimg.com/290/413/nature", alt="")
+                                                    .thumb-category
+                                                        i.ico-houseout
+                                                            span.hide-txt 집밖
+                                                    .thumb-btn
+                                                        span.txt 예매 바로가기
+                                                .box-tag
+                                                    .tag.type01
+                                                        span.txt 공연/전시
+                                                    .tag.type01
+                                                        span.txt 연극
+                                                .box-txt
+                                                    strong.txt-tit 지원의 음악과 미술이 함께하는 콘서트
+                                                    p.txt-desc
+                                                    dl.txt-data
+                                                        dt.data-term 기간 
+                                                        dd.data-desc 2022.09.21~  2022.09.25
+                                                        dt.data-term 문의
+                                                        dd.data-desc 02-360-866
+                                        
 
-                        .visual-area
-                            .visual-content-box
-                                .video 비디오 컨텐츠 영역
-                            .visual-text-box
-                                h3.title-h3 [정부위원회 246개 통폐합···40% 가까이 정비 [뉴스의 맥]
-                                p.sub-txt 김용민 앵커 > 앞서 국무회의 소식 전해드렸는데요. 국무회의 주요 안건을 취재기자와 자세히 알아보겠습니다. 임소형 기자 나와있습니다. 윤 대통령이 정부세종청사에서 국무회의를 주재한 건 이번이 두 번째였는데요. 어떤 안건들이 다뤄졌습니까. …
-                                dl.info
-                                    dt 출처
-                                    dd 한국정책방송원
+                                    //- Add Pagination
+                                    .swiper-pagination
+                                    //- Add Arrows
+                                    .swiper-button-prev
+                                    .swiper-button-next
+
+
+block script
+    script.
+        var swiper = new Swiper('.main-home-swiper .swiper-container', {
+            slidesPerView: 2,
+            spaceBetween: 10,
+            watchOverflow: true,
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            breakpoints: {
+                1025: {
+                    slidesPerView: 4,
+                    spaceBetween: 40,
+                },
+            }
+        });             
+
+
 
                                 
 
