--- a/www/css/oneEye.css
+++ b/www/css/oneEye.css
@@ -1,4 +1,179 @@
-.title-h1 {
-  font-size: 24px; }
+.ico-housein {
+  width: 60px;
+  height: 60px;
+  background: url("/images/home/ico_house_in.png") center/contain; }
 
-/*# sourceMappingURL=../../sass_maps/css/oneEye.css.map */
+.ico-houseout {
+  width: 60px;
+  height: 60px;
+  background: url("/images/home/ico_house_out.png") center/contain; }
+
+.section-inner {
+  max-width: 1280px;
+  margin: 0 auto; }
+
+.intro-home {
+  height: 254px;
+  background: url("/images/home/img_banner_home.jpg") center/cover; }
+
+.title-area {
+  text-align: center;
+  margin-bottom: 32px; }
+  .title-area .title-h2 {
+    font-size: 32px;
+    font-weight: bold;
+    color: #222; }
+
+.main-home {
+  padding: 52px 0 80px; }
+
+.main-home-swiper .swiper-slide a {
+  display: block;
+  cursor: pointer; }
+
+.main-home-swiper .box-thumb {
+  position: relative; }
+
+.main-home-swiper .thumb-img {
+  display: block;
+  width: 100%; }
+
+.main-home-swiper .thumb-category {
+  position: absolute;
+  top: 10px;
+  right: 10px; }
+
+.main-home-swiper .thumb-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 48px;
+  border: solid 1px #eee;
+  background-color: #222;
+  text-align: center; }
+  .main-home-swiper .thumb-btn .txt {
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff; }
+
+.main-home-swiper .box-tag {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin-top: 16px; }
+
+.main-home-swiper .tag {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #f8f8f8;
+  height: 27px;
+  padding: 0 12px;
+  border-radius: 13.5px;
+  margin-right: 8px; }
+  .main-home-swiper .tag:last-child {
+    margin: 0; }
+  .main-home-swiper .tag .txt {
+    font-size: 13px; }
+  .main-home-swiper .tag.type01 {
+    background-color: #fff;
+    border: solid 1px #222; }
+    .main-home-swiper .tag.type01 .txt {
+      color: #222; }
+
+.main-home-swiper .box-txt {
+  margin-top: 8px; }
+  .main-home-swiper .box-txt .txt-tit {
+    display: block;
+    font-size: 20px;
+    color: #222;
+    line-height: 1.5;
+    margin-bottom: 16px;
+    height: 59px;
+    width: 100%;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
+    overflow: hidden;
+    word-break: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; }
+  .main-home-swiper .box-txt .txt-desc {
+    font-size: 14px;
+    color: #999;
+    line-height: 1.42;
+    width: 100%;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
+    overflow: hidden;
+    word-break: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; }
+  .main-home-swiper .box-txt .txt-data {
+    font-size: 14px;
+    color: #999;
+    line-height: 1.42;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+    .main-home-swiper .box-txt .txt-data .data-term {
+      width: 70px; }
+    .main-home-swiper .box-txt .txt-data .data-desc {
+      width: -webkit-calc(100% - 70px);
+      width: calc(100% - 70px);
+      margin-bottom: 4px; }
+      .main-home-swiper .box-txt .txt-data .data-desc:last-child {
+        margin-bottom: 0; }
+
+@media (max-width: 1024px) {
+  .title-area .title-h2 {
+    font-size: 24px; }
+  .main-home-swiper [class^="ico-"] {
+    width: 48px;
+    height: 48px; }
+  .main-home-swiper .swiper-container {
+    padding: 0 23px; }
+  .main-home-swiper .swiper-slide {
+    width: 152px; }
+  .main-home-swiper .tag {
+    height: 23px;
+    padding: 8px;
+    margin-right: 4px; }
+  .main-home-swiper .tag .txt {
+    font-size: 10px; }
+  .main-home-swiper .box-txt .txt-tit {
+    font-size: 16px;
+    height: 48px; }
+  .main-home-swiper .box-txt .txt-desc {
+    font-size: 12px; }
+  .main-home-swiper .box-txt .txt-data {
+    font-size: 12px; } }
+
+/*# sourceMappingURL=../sass_maps/oneEye.css.map */
